fix: align-items in md

--- a/public/modules/dashboard/css/onboarding-details.css
+++ b/public/modules/dashboard/css/onboarding-details.css
@@ -169,8 +169,8 @@
     }
 
     .icon-onboarding-2 {
-        height: calc(75px - 5%);
-        width: calc(75px - 5%);
+        height: 65px;
+        width: 65px;
     }
 
     #modal-content-onboarding .slick-list {
